# psyche-engine

./: .gitignore  .yapf  LICENSE  alembic.ini  manage.py  manage_db.py  pyproject.toml  requirements.txt  run.ps1
alembic/: env.py  script.py.mako
alembic/versions/: 011091ea5951_seed_aiprovider.py  2781e7689543_create_initial_tables.py  836656fa5999_initial_schema.py
docs/: evaluations.md
psyche/: db.py  fastapi_app.py  logconfig.py  main.py
psyche/routers/: api_keys.py  chat.py  journal.py
src/: db.py  logconfig.py  main.py
src/psyche/: config.py  crud.py  custom_endpoint_creator.py  database.py  db.py  dependencies.py  exceptions.py  fastapi_app.py  fastapi_deps.py  job_manager.py  log_config.py  logconfig.py  main.py  openai_clients.py  prompting.py  task_executor.py
src/psyche/agent/: tasks.py
src/psyche/agents/: tasks.py
src/psyche/endpoints/: calendar.py  goals.py  jobs.py  openai_api_keys.py  openai_api_models.py  openai_api_providers.py
src/psyche/models/: __init__.py  ai_models.py  base.py  calendar_models.py  chat_models.py  evaluation_models.py  goal_models.py  graph_models.py  journal_models.py  mixins.py  openai_api_models.py
src/psyche/prompts/: activities.j2  basic.j2  common.j2  single_goal.j2  strategy.j2  system.j2
src/psyche/routers/: ai_agents.py  ai_models.py  ai_providers.py  api_keys.py  chat.py  conversations.py  journal.py  journal_entries.py
src/psyche/schemas/: ai_schemas.py  calendar_schemas.py  chat_schemas.py  common_schemas.py  generic_schemas.py  goal_schemas.py  job_schemas.py  journal_schemas.py  (+1 more)
(+2 files in other folders)
