[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyche"
version = "0.1.0"
description = "Psychic Operating System"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "fastcrud",
    "openai"
]

[project.optional-dependencies]
dev = [
    "yapf",
    "click"
]

[tool.setuptools.packages.find]
where = ["src"]