[build-system]
requires = ["setuptools >= 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyche-engine"
version = "0.1.0"
description = "Psychic Operating System"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "openai",
]

