[build-system]
requires = ["setuptools >= 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyche-engine"
version = "0.1.0"
description = "Psychic Operating System"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "openai",
    "Jinja2",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psyche = ["prompts/*.j2"]